--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ Convertido en un veterano de la Primera Guerra Mundial, el joven Strunk entabló
 <div class="involved-authors only-author no-avatars no-author-photo">
 <div class="first-author no-photo">
 <div class="info-author">
-<a class="lnk-author no-clickable ">Gustavo Palomares Lerma</a>
+<a class="lnk-author no-clickable "></a>
 </div>
 </div>
 </div></div>
