--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ Convertido en un veterano de la Primera Guerra Mundial, el joven Strunk entabló
 <div class="entry-media ng-container-media"><figure class="thumb zoom"><img src="images/smecher.png">
 <div class="info">
 <h2 class="credit-title"></h2>
-<figcaption class="by">Foto: Ullstein bild / Getty Images</figcaption></div></figure></div>
+<figcaption class="by">Foto: Matei Stefan / Getty Images</figcaption></div></figure></div>
 </div>
 </div><!-- START: detail--><div class="entry-media ng-container-media">
 <div id="involveds" class="involveds wrap">
